--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "@tarojs/taro-h5": "2.0.2",
     "@tarojs/taro-qq": "2.0.2",
     "@tarojs/taro-quickapp": "2.0.2",
+    "@tarojs/taro-rn": "2.0.2",
     "@tarojs/taro-swan": "2.0.2",
     "@tarojs/taro-tt": "2.0.2",
     "@tarojs/taro-weapp": "2.0.2",
-    "@tarojs/taro-rn": "2.0.2",
+    "nerv-devtools": "^1.5.5",
     "nervjs": "^1.5.5",
-    "nerv-devtools": "^1.5.5"
+    "taro-ui": "^2.2.1-20"
   },
   "devDependencies": {
     "@types/react": "^16.4.6",
